<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_welcome"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_padding_8"
                    android:paddingTop="@dimen/activity_padding"
                    android:text="@string/message_welcome_description"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_welcome_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_percentile"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_padding_8"
                    android:paddingTop="@dimen/activity_padding"
                    android:text="@string/random_percentile_description"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_percentile_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_color"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_padding_8"
                    android:paddingTop="@dimen/activity_padding"
                    android:text="@string/favorite_color_description"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_padding_8"
                    android:text="@string/favorite_color_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_color"
                    android:textColor="@android:color/black"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <RadioButton
                        android:id="@+id/rb_black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/black"
                        android:text="@string/black"/>

                    <RadioButton
                        android:id="@+id/rb_blue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/blue"
                        android:text="@string/blue"/>

                    <RadioButton
                        android:id="@+id/rb_cyan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/cyan"
                        android:text="@string/cyan"/>
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <RadioButton
                        android:id="@+id/rb_yellow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/yellow"
                        android:text="@string/yellow"/>

                    <RadioButton
                        android:id="@+id/rb_gray"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/gray"
                        android:text="@string/gray"/>

                    <RadioButton
                        android:id="@+id/rb_green"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/green"
                        android:text="@string/green"/>
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <RadioButton
                        android:id="@+id/rb_magenta"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/magenta"
                        android:text="@string/magenta"/>

                    <RadioButton
                        android:id="@+id/rb_red"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/red"
                        android:text="@string/red"/>

                    <RadioButton
                        android:id="@+id/rb_white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClickColor"
                        android:tag="@string/white"
                        android:text="@string/white"/>
                </RadioGroup>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>