<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_welcome"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fetched_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tvMessageWelcome"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_welcome_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_percentile"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fetched_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tvRandomPercentile"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_percentile_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_inner_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_inner_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding_16">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_color"
                    android:textColor="@android:color/black"/>

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fetched_value"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/tvFavoriteColor"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_padding_8"
                    android:text="@string/favorite_color_value"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvColor"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/white"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>